UAT env, campi opzionali
